--- a/client/docker-compose.yml
+++ b/client/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 services:
-  client:
+  tank-game-client:
     build: .
     restart: unless-stopped
   
-  swag:
+  tank-game-swag:
     image: lscr.io/linuxserver/swag
-    container_name: ethan-tank-game-swag
+    container_name: tank-game-swag
     cap_add:
       - NET_ADMIN
     environment:
@@ -16,7 +16,7 @@ services:
       - URL=tankbattles.duckdns.org
       - VALIDATION=duckdns
       - DUCKDNSTOKEN=${DUCKDNSTOKEN}
-      - STAGING=false
+      - STAGING=true
     volumes:
       - /home/ethan/data/tank-game-swag:/config
       - ./swag-default.conf:/config/nginx/site-confs/default.conf
