--- a/client/docker-compose.yml
+++ b/client/docker-compose.yml
@@ -1,12 +1,12 @@
-version: '3'
+version: "3"
 services:
-  tank-game-client:
+  tank-battles-client:
     build: .
     restart: unless-stopped
-  
-  tank-game-swag:
+
+  tank-battles-swag:
     image: lscr.io/linuxserver/swag
-    container_name: tank-game-swag
+    container_name: tank-battles-swag
     cap_add:
       - NET_ADMIN
     environment:
@@ -18,7 +18,7 @@ services:
       - DUCKDNSTOKEN=${DUCKDNSTOKEN}
       - STAGING=false
     volumes:
-      - /home/ethan/data/tank-game-swag:/config
+      - /home/ethan/data/tankbattles-swag:/config
       - ./swag-default.conf:/config/nginx/site-confs/default.conf
     ports:
     - 0.0.0.0:10007:443
