--- a/client/swag-default.conf
+++ b/client/swag-default.conf
@@ -14,6 +14,6 @@ server {
   include /config/nginx/ssl.conf;
   
   location / {
-    proxy_pass http://tank-game-client;
+    proxy_pass http://tank-battles-client;
   }
 }
