--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,9 @@ jobs:
         run: |
           cd client
 
+          docker build -t tank_battle_eslint -f eslint.Dockerfile .
+          docker run -i --rm tank_battle_eslint
+
           docker compose pull
           docker compose build
           docker compose down
