Created navbar and client-default config file

--- a/client/swag-default.conf
+++ b/client/swag-default.conf
@@ -16,4 +16,8 @@ server {
   location / {
     proxy_pass http://tank-battles-client;
   }
+
+  location /api {
+    proxy_pass http://tank-battles-api:10000;
+  }
 }
