--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@types/bootstrap": "^5.2.8",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.60",
+    "@types/node-sass": "^4.11.6",
     "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
     "bootstrap": "^5.3.2",
@@ -17,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.69.5",
     "scss": "^0.2.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
