--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,22 @@
-FROM mcr.microsoft.com/dotnet/sdk:7.0 as build
+# FROM mcr.microsoft.com/dotnet/sdk:7.0 as build
 
+# WORKDIR /app
+# COPY *.csproj .
+# RUN dotnet restore
+# ENTRYPOINT ["dotnet", "watch", "run", "--AlwaysRestartOnRudeEdit"]
+
+FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build-env
 WORKDIR /app
-COPY *.csproj .
+
+# Copy everything
+COPY . ./
+# Restore as distinct layers
 RUN dotnet restore
-ENTRYPOINT ["dotnet", "watch", "run", "--AlwaysRestartOnRudeEdit"]
+# Build and publish a release
+RUN dotnet publish -c Release -o out
+
+# Build runtime image
+FROM mcr.microsoft.com/dotnet/aspnet:7.0
+WORKDIR /app
+COPY --from=build-env /app/out .
+ENTRYPOINT ["dotnet", "api.dll"]
