--- a/client/swag-keycloak-default.conf
+++ b/client/swag-keycloak-default.conf
@@ -15,6 +15,6 @@ server {
   include /config/nginx/ssl.conf;
   
   location / {
-    proxy_pass http://tank-battles-keycloak;
+    proxy_pass http://tank-battles-keycloak:8080;
   }
 }
