--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "@types/react-dom": "^18.2.14",
     "bootstrap": "^5.3.2",
     "eslint": "^8.53.0",
+    "oidc-client-ts": "^3.0.0-beta.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-oidc-context": "^3.0.0-beta.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
