--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "oidc-client-ts": "^3.0.0-beta.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-oidc-context": "^3.0.0-beta.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
